Fix specificity for gap tweak in title input

--- a/plugins/woocommerce/client/legacy/css/admin.scss
+++ b/plugins/woocommerce/client/legacy/css/admin.scss
@@ -5619,7 +5619,7 @@ img.help_tip {
 	}
 
 	// Gap between Title and Slug edit should be 8px, so we need to clear margins.
-	#titlediv .inside {
+	#poststuff #titlediv .inside {
 		padding: 0;
 		margin-top: $gap-smaller;
 	}
